--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -34,7 +34,7 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://main.gd"]
+open_scripts=["res://main.gd", "res://packets.gd"]
 selected_script="res://main.gd"
 open_help=[]
 script_split_offset=52
