--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -35,7 +35,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://main.gd", "res://websocket.gd"]
-selected_script="res://websocket.gd"
+selected_script="res://main.gd"
 open_help=[]
 script_split_offset=52
 list_split_offset=0
