--- a/client/.godot/editor/project_metadata.cfg
+++ b/client/.godot/editor/project_metadata.cfg
@@ -15,3 +15,19 @@ scenes=["res://main.tscn"]
 [script_setup]
 
 last_selected_language="GDScript"
+
+[debug_options]
+
+run_main_feature_tags=""
+multiple_instances_enabled=true
+run_instances_config=Array[Dictionary]([{
+"arguments": "",
+"features": "",
+"override_args": false,
+"override_features": false
+}, {
+"arguments": "",
+"features": "",
+"override_args": false,
+"override_features": false
+}])
