--- a/client/.godot/global_script_class_cache.cfg
+++ b/client/.godot/global_script_class_cache.cfg
@@ -1,1 +1,7 @@
-list=Array[Dictionary]([])
+list=Array[Dictionary]([{
+"base": &"RichTextLabel",
+"class": &"Log",
+"icon": "",
+"language": &"GDScript",
+"path": "res://classes/log/log.gd"
+}])
