--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -3,12 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 48,
+"column": 41,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 43,
-"scroll_position": 32.0,
-"selection": false,
+"row": 5,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 41,
+"selection_from_line": 5,
+"selection_to_column": 45,
+"selection_to_line": 5,
 "syntax_highlighter": "GDScript"
 }
 
@@ -50,6 +54,56 @@ state={
 "h_scroll_position": 0,
 "row": 1,
 "scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://game_manager.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 10,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 10,
+"selection_to_column": 46,
+"selection_to_line": 11,
+"syntax_highlighter": "GDScript"
+}
+
+[res://states/start/start.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 46,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 34,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 41,
+"selection_from_line": 34,
+"selection_to_column": 46,
+"selection_to_line": 34,
+"syntax_highlighter": "GDScript"
+}
+
+[res://states/lobby/lobby.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 32,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 39,
+"scroll_position": 26.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
