--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -18,24 +18,24 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://classes/log/log.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/start/", "res://states/lobby/", "res://classes/", "res://classes/log/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/start/", "res://states/lobby/", "res://components/", "res://components/chat/", "res://classes/", "res://classes/log/")
 dock_3="Scene,Import"
 dock_4="FileSystem,Godobuf"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn", "res://states/start/start.tscn", "res://states/lobby/lobby.tscn")
-current_scene="res://main.tscn"
+open_scenes=PackedStringArray("res://states/lobby/lobby.tscn", "res://components/chat/chat.tscn")
+current_scene="res://components/chat/chat.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://game_manager.gd", "res://states/lobby/lobby.gd", "res://states/start/start.gd", "res://classes/log/log.gd", "res://main.gd", "res://websocket.gd"]
-selected_script="res://states/lobby/lobby.gd"
+open_scripts=["res://components/chat/chat.gd", "res://states/lobby/lobby.gd", "res://classes/log/log.gd"]
+selected_script="res://classes/log/log.gd"
 open_help=[]
 script_split_offset=52
 list_split_offset=0
