--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=202
+dock_hsplit_2=284
 dock_hsplit_3=-321
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=180
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://classes/log/log.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/start/", "res://states/lobby/", "res://components/", "res://components/chat/", "res://classes/", "res://classes/log/")
+dock_filesystem_selected_paths=PackedStringArray("res://components/chat/chat.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/start/", "res://states/lobby/", "res://components/", "res://components/chat/", "res://classes/", "res://classes/message/")
 dock_3="Scene,Import"
 dock_4="FileSystem,Godobuf"
 dock_5="Inspector,Node,History"
@@ -26,16 +26,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://states/lobby/lobby.tscn", "res://components/chat/chat.tscn")
-current_scene="res://components/chat/chat.tscn"
+current_scene="res://states/lobby/lobby.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://components/chat/chat.gd", "res://states/lobby/lobby.gd", "res://classes/log/log.gd"]
-selected_script="res://classes/log/log.gd"
+open_scripts=["res://components/chat/chat.gd", "res://game_manager.gd", "res://states/lobby/lobby.gd", "res://main.gd", "res://classes/message/message.gd", "res://states/start/start.gd"]
+selected_script="res://states/start/start.gd"
 open_help=[]
 script_split_offset=52
 list_split_offset=0
