--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -8,11 +8,7 @@ state={
 "h_scroll_position": 0,
 "row": 5,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 41,
-"selection_from_line": 5,
-"selection_to_column": 45,
-"selection_to_line": 5,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -44,20 +40,6 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://classes/log/log.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 32,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 11,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
 [res://game_manager.gd]
 
 state={
@@ -66,8 +48,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 1,
-"scroll_position": 0.0,
+"row": 26,
+"scroll_position": 13.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -77,16 +59,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 46,
+"column": 37,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 34,
-"scroll_position": 18.0,
-"selection": true,
-"selection_from_column": 41,
-"selection_from_line": 34,
-"selection_to_column": 46,
-"selection_to_line": 34,
+"row": 5,
+"scroll_position": 0.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -95,11 +73,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 46,
+"column": 28,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 41,
-"scroll_position": 28.0,
+"row": 40,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -109,11 +87,29 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 1,
+"row": 7,
 "scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 7,
+"selection_to_column": 17,
+"selection_to_line": 7,
+"syntax_highlighter": "GDScript"
+}
+
+[res://classes/message/message.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 11,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 25,
+"scroll_position": 13.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
