--- a/client/.godot/global_script_class_cache.cfg
+++ b/client/.godot/global_script_class_cache.cfg
@@ -1,7 +1,7 @@
 list=Array[Dictionary]([{
 "base": &"RichTextLabel",
-"class": &"Log",
+"class": &"Message",
 "icon": "",
 "language": &"GDScript",
-"path": "res://classes/log/log.gd"
+"path": "res://classes/message/message.gd"
 }])
