--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://classes/message/message.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://icon.svg")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/start/", "res://states/lobby/", "res://components/", "res://components/chat/", "res://classes/", "res://classes/message/")
 dock_3="Scene,Import"
 dock_4="FileSystem,Godobuf"
@@ -34,8 +34,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://components/chat/chat.gd", "res://classes/message/message.gd"]
-selected_script="res://components/chat/chat.gd"
+open_scripts=["res://components/chat/chat.gd", "res://classes/message/message.gd", "res://states/lobby/lobby.gd", "res://states/start/start.gd"]
+selected_script="res://states/start/start.gd"
 open_help=[]
 script_split_offset=52
 list_split_offset=0
