--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -17,28 +17,28 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://main.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/start/", "res://states/lobby/", "res://classes/message/", "res://autoloads/")
+dock_filesystem_selected_paths=PackedStringArray("res://components/escape_menu/lobby/lobby_escape_menu.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://components/", "res://components/escape_menu/", "res://components/escape_menu/lobby/", "res://classes/message/")
 dock_3="Scene,Import"
 dock_4="FileSystem,Godobuf"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://components/escape_menu/escape_menu.tscn", "res://states/lobby/lobby.tscn")
-current_scene="res://components/escape_menu/escape_menu.tscn"
+open_scenes=PackedStringArray("res://states/lobby/lobby.tscn", "res://components/escape_menu/lobby/lobby_escape_menu.tscn", "res://components/chat/chat.tscn")
+current_scene="res://components/escape_menu/lobby/lobby_escape_menu.tscn"
 center_split_offset=-192
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://components/chat/chat.gd", "res://components/escape_menu/escape_menu.gd", "res://autoloads/game_manager.gd", "res://states/lobby/lobby.gd", "res://main.gd", "res://classes/message/message.gd", "res://autoloads/signals.gd", "res://states/start/start.gd", "res://autoloads/websocket.gd"]
-selected_script="res://autoloads/signals.gd"
+open_scripts=["res://components/chat/chat.gd", "res://components/escape_menu/lobby/lobby_escape_menu.gd", "res://states/lobby/lobby.gd", "res://main.gd", "res://classes/message/message.gd", "res://autoloads/signals.gd", "res://states/start/start.gd"]
+selected_script="res://states/lobby/lobby.gd"
 open_help=[]
-script_split_offset=52
-list_split_offset=0
+script_split_offset=131
+list_split_offset=75
 zoom_factor=1.0
 
 [ShaderEditor]
