--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -10,32 +10,32 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=284
-dock_hsplit_3=-321
+dock_hsplit_3=-242
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=180
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://addons/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/lobby/", "res://components/escape_menu/lobby/", "res://components/chat/", "res://classes/message/")
+dock_filesystem_selected_paths=PackedStringArray("res://autoloads/websocket.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/start/", "res://components/escape_menu/lobby/", "res://components/chat/", "res://classes/message/", "res://autoloads/")
 dock_3="Scene,Import"
 dock_4="FileSystem,Godobuf"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://states/lobby/lobby.tscn")
-current_scene="res://states/lobby/lobby.tscn"
+open_scenes=PackedStringArray("res://states/lobby/lobby.tscn", "res://states/start/start.tscn")
+current_scene="res://states/start/start.tscn"
 center_split_offset=-192
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_default_debugger_tab_idx=1
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://autoloads/game_manager.gd", "res://states/start/start.gd"]
-selected_script="res://states/start/start.gd"
+open_scripts=["res://autoloads/game_manager.gd", "res://main.gd", "res://states/start/start.gd", "res://autoloads/websocket.gd"]
+selected_script="res://autoloads/websocket.gd"
 open_help=[]
 script_split_offset=131
 list_split_offset=75
