--- a/client/.godot/editor/project_metadata.cfg
+++ b/client/.godot/editor/project_metadata.cfg
@@ -41,7 +41,7 @@ run_instances_config=Array[Dictionary]([{
 
 [export_options]
 
-default_filename="MMO Tor Client"
+default_filename="MMO Client"
 
 [project_settings]
 
