--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -35,7 +35,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://autoloads/game_manager.gd", "res://main.gd", "res://states/start/start.gd", "res://autoloads/websocket.gd"]
-selected_script="res://autoloads/websocket.gd"
+selected_script="res://states/start/start.gd"
 open_help=[]
 script_split_offset=131
 list_split_offset=75
