--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://autoloads/websocket.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/start/", "res://components/escape_menu/lobby/", "res://components/chat/", "res://classes/message/", "res://autoloads/")
+dock_filesystem_selected_paths=PackedStringArray("res://components/chat/chat.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/start/", "res://components/", "res://components/escape_menu/lobby/", "res://components/chat/", "res://classes/", "res://classes/message/")
 dock_3="Scene,Import"
 dock_4="FileSystem,Godobuf"
 dock_5="Inspector,Node,History"
@@ -28,14 +28,14 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://states/lobby/lobby.tscn", "res://states/start/start.tscn")
 current_scene="res://states/start/start.tscn"
 center_split_offset=-192
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://autoloads/game_manager.gd", "res://main.gd", "res://states/start/start.gd", "res://autoloads/websocket.gd"]
-selected_script="res://states/start/start.gd"
+open_scripts=["res://components/chat/chat.gd", "res://states/lobby/lobby.gd", "res://classes/message/message.gd", "res://autoloads/signals.gd", "res://states/start/start.gd", "res://autoloads/websocket.gd"]
+selected_script="res://autoloads/websocket.gd"
 open_help=[]
 script_split_offset=131
 list_split_offset=75
