--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -31,11 +31,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 9,
-"scroll_position": 0.0,
+"row": 56,
+"scroll_position": 39.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -45,16 +45,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 28,
+"column": 35,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 42,
-"scroll_position": 29.0,
-"selection": true,
-"selection_from_column": 10,
-"selection_from_line": 42,
-"selection_to_column": 28,
-"selection_to_line": 42,
+"row": 46,
+"scroll_position": 35.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -105,11 +101,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 24,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 54,
-"scroll_position": 54.0,
+"row": 58,
+"scroll_position": 76.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
