--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -1,8 +1,8 @@
 [docks]
 
 dock_3_selected_tab_idx=0
-dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_4_selected_tab_idx=1
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -25,17 +25,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://states/lobby/lobby.tscn", "res://states/start/start.tscn", "res://states/authentication/authentication.tscn")
+open_scenes=PackedStringArray("res://states/start/start.tscn", "res://states/authentication/authentication.tscn", "res://states/lobby/lobby.tscn")
 current_scene="res://states/lobby/lobby.tscn"
 center_split_offset=-192
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://states/authentication/authentication.gd", "res://states/lobby/lobby.gd", "res://autoloads/websocket.gd"]
-selected_script="res://autoloads/websocket.gd"
+selected_script="res://states/lobby/lobby.gd"
 open_help=[]
 script_split_offset=112
 list_split_offset=75
