--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -17,16 +17,16 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://classes/message/message.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/start/", "res://states/lobby/", "res://states/authentication/", "res://components/", "res://components/escape_menu/", "res://components/escape_menu/lobby/", "res://components/chat/", "res://classes/", "res://classes/message/", "res://autoloads/")
+dock_filesystem_selected_paths=PackedStringArray("res://packets.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/start/", "res://states/room/", "res://states/lobby/", "res://states/authentication/", "res://components/", "res://components/escape_menu/", "res://components/escape_menu/room/", "res://components/escape_menu/lobby/", "res://components/chat/", "res://classes/", "res://classes/message/", "res://autoloads/")
 dock_3="Scene,Import"
 dock_4="FileSystem,Godobuf"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://states/start/start.tscn", "res://states/authentication/authentication.tscn", "res://states/lobby/lobby.tscn")
-current_scene="res://states/lobby/lobby.tscn"
+open_scenes=PackedStringArray("res://states/start/start.tscn", "res://states/authentication/authentication.tscn", "res://states/lobby/lobby.tscn", "res://states/room/room.tscn")
+current_scene="res://states/room/room.tscn"
 center_split_offset=-192
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
@@ -34,10 +34,10 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://states/authentication/authentication.gd", "res://components/chat/chat.gd", "res://autoloads/game_manager.gd", "res://states/lobby/lobby.gd", "res://classes/message/message.gd", "res://states/start/start.gd", "res://autoloads/websocket.gd"]
-selected_script="res://states/lobby/lobby.gd"
+open_scripts=["res://states/authentication/authentication.gd", "res://components/chat/chat.gd", "res://autoloads/game_manager.gd", "res://states/lobby/lobby.gd", "res://states/room/room.gd", "res://components/escape_menu/room/room_escape_menu.gd", "res://states/start/start.gd", "res://autoloads/websocket.gd"]
+selected_script="res://states/room/room.gd"
 open_help=[]
-script_split_offset=112
+script_split_offset=146
 list_split_offset=75
 zoom_factor=1.0
 
