--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -21,7 +21,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 9,
-"scroll_position": 0.0,
+"scroll_position": 18.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,12 +31,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 34,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 53,
+"row": 54,
 "scroll_position": 39.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 54,
+"selection_to_column": 56,
+"selection_to_line": 55,
 "syntax_highlighter": "GDScript"
 }
 
@@ -45,11 +49,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 60,
+"column": 27,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 24,
-"row": 94,
-"scroll_position": 91.0,
+"h_scroll_position": 0,
+"row": 18,
+"scroll_position": 12.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -73,16 +77,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 41,
+"column": 38,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 13,
-"scroll_position": 10.0,
-"selection": true,
-"selection_from_column": 26,
-"selection_from_line": 13,
-"selection_to_column": 41,
-"selection_to_line": 13,
+"row": 15,
+"scroll_position": 7.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -91,11 +91,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 6,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 17,
-"scroll_position": 6.0,
+"row": 7,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -109,7 +109,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 77,
-"scroll_position": 60.0,
+"scroll_position": 82.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -133,12 +133,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 40,
-"scroll_position": 18.0,
-"selection": false,
+"row": 47,
+"scroll_position": 29.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 0,
+"selection_to_line": 47,
 "syntax_highlighter": "GDScript"
 }
 
@@ -152,6 +156,34 @@ state={
 "h_scroll_position": 0,
 "row": 74,
 "scroll_position": 30.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://states/room/room.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 49,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 139,
+"scroll_position": 129.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://components/escape_menu/room/room_escape_menu.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 22,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
