--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -17,16 +17,16 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://components/escape_menu/lobby/lobby_escape_menu.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/start/", "res://states/room/", "res://states/lobby/", "res://states/authentication/", "res://components/", "res://components/escape_menu/", "res://components/escape_menu/room/", "res://components/escape_menu/lobby/", "res://components/dialog_box/", "res://components/chat/", "res://classes/", "res://classes/message/", "res://autoloads/")
+dock_filesystem_selected_paths=PackedStringArray("res://states/connected/connected.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://components/", "res://components/escape_menu/", "res://components/escape_menu/room/", "res://components/escape_menu/lobby/", "res://components/dialog_box/", "res://components/chat/", "res://classes/", "res://classes/message/", "res://autoloads/")
 dock_3="Scene,Import"
 dock_4="FileSystem,Godobuf"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://states/start/start.tscn", "res://states/lobby/lobby.tscn", "res://states/room/room.tscn", "res://components/dialog_box/dialog_box.tscn")
-current_scene="res://states/start/start.tscn"
+open_scenes=PackedStringArray("res://states/connected/connected.tscn")
+current_scene="res://states/connected/connected.tscn"
 center_split_offset=-192
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -34,8 +34,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://states/authentication/authentication.gd", "res://components/chat/chat.gd", "res://components/dialog_box/dialog_box.gd", "res://autoloads/game_manager.gd", "res://states/lobby/lobby.gd", "res://states/room/room.gd", "res://components/escape_menu/room/room_escape_menu.gd", "res://states/start/start.gd", "res://autoloads/websocket.gd"]
-selected_script="res://components/dialog_box/dialog_box.gd"
+open_scripts=["res://states/authentication/authentication.gd", "res://states/connected/connected.gd", "res://states/lobby/lobby.gd", "res://main.gd"]
+selected_script="res://main.gd"
 open_help=[]
 script_split_offset=146
 list_split_offset=75
