--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -18,7 +18,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://states/connected/connected.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://components/", "res://components/escape_menu/", "res://components/escape_menu/room/", "res://components/escape_menu/lobby/", "res://components/dialog_box/", "res://components/chat/", "res://classes/", "res://classes/message/", "res://autoloads/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://components/escape_menu/", "res://components/escape_menu/room/", "res://components/escape_menu/lobby/", "res://components/dialog_box/", "res://components/chat/", "res://classes/message/")
 dock_3="Scene,Import"
 dock_4="FileSystem,Godobuf"
 dock_5="Inspector,Node,History"
