--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://components/dialog_box/dialog_box.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/lobby/", "res://components/", "res://components/escape_menu/", "res://components/escape_menu/room/", "res://components/escape_menu/lobby/", "res://components/dialog_box/", "res://components/chat/", "res://components/browser/", "res://classes/message/")
+dock_filesystem_selected_paths=PackedStringArray("res://states/connected/connected.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/lobby/", "res://states/connected/", "res://components/", "res://components/escape_menu/", "res://components/escape_menu/room/", "res://components/escape_menu/lobby/", "res://components/dialog_box/", "res://components/chat/", "res://components/browser/", "res://classes/message/", "res://autoloads/")
 dock_3="Scene,Import"
 dock_4="FileSystem,Godobuf"
 dock_5="Inspector,Node,History"
@@ -34,7 +34,7 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://components/browser/browser.gd", "res://components/chat/chat.gd", "res://states/lobby/lobby.gd", "res://autoloads/websocket.gd"]
+open_scripts=["res://components/browser/browser.gd", "res://components/browser/entry.gd", "res://states/lobby/lobby.gd", "res://autoloads/signals.gd"]
 selected_script="res://states/lobby/lobby.gd"
 open_help=[]
 script_split_offset=146
