--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://states/connected/connected.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://packets.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/lobby/", "res://states/connected/", "res://components/", "res://components/escape_menu/", "res://components/escape_menu/room/", "res://components/escape_menu/lobby/", "res://components/dialog_box/", "res://components/chat/", "res://components/browser/", "res://classes/message/", "res://autoloads/")
 dock_3="Scene,Import"
 dock_4="FileSystem,Godobuf"
@@ -26,7 +26,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://states/lobby/lobby.tscn", "res://components/browser/browser.tscn", "res://components/browser/entry.tscn")
-current_scene="res://components/browser/browser.tscn"
+current_scene="res://components/browser/entry.tscn"
 center_split_offset=-192
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
