--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 720,
-"scroll_position": 713.0,
+"row": 0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -34,8 +34,8 @@ state={
 "column": 35,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 145,
-"scroll_position": 134.0,
+"row": 59,
+"scroll_position": 48.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -207,16 +207,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 23,
+"column": 25,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 126,
-"scroll_position": 121.0,
-"selection": true,
-"selection_from_column": 5,
-"selection_from_line": 126,
-"selection_to_column": 23,
-"selection_to_line": 126,
+"row": 139,
+"scroll_position": 128.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -225,11 +221,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 56,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 43,
-"scroll_position": 27.0,
+"row": 39,
+"scroll_position": 24.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
