--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -17,25 +17,25 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://packets.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/lobby/", "res://components/escape_menu/room/", "res://components/escape_menu/lobby/", "res://classes/message/", "res://assets/", "res://assets/icons/")
+dock_filesystem_selected_paths=PackedStringArray("res://states/game/game.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://components/", "res://components/escape_menu/game/", "res://classes/message/", "res://assets/icons/")
 dock_3="Scene,Import"
 dock_4="FileSystem,Godobuf"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://states/room/room.tscn", "res://components/duel/duel.tscn", "res://components/slot/slot.tscn")
-current_scene="res://components/slot/slot.tscn"
+open_scenes=PackedStringArray("res://states/game/game.tscn")
+current_scene="res://states/game/game.tscn"
 center_split_offset=-192
-selected_default_debugger_tab_idx=1
-selected_main_editor_idx=2
+selected_default_debugger_tab_idx=0
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://components/browser/browser.gd", "res://components/browser/entry.gd", "res://states/lobby/lobby.gd", "res://components/escape_menu/lobby/lobby_escape_menu.gd", "res://states/room/room.gd", "res://components/escape_menu/room/room_escape_menu.gd", "res://autoloads/signals.gd", "res://components/slot/slot.gd"]
-selected_script="res://components/browser/browser.gd"
+open_scripts=["res://states/game/game.gd", "res://autoloads/game_manager.gd"]
+selected_script="res://autoloads/game_manager.gd"
 open_help=[]
 script_split_offset=146
 list_split_offset=75
