--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -3,10 +3,10 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 37,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
+"row": 14,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -23,24 +23,6 @@ state={
 "row": 0,
 "scroll_position": 0.0,
 "selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://states/lobby/lobby.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 46,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 135,
-"scroll_position": 115.0,
-"selection": true,
-"selection_from_column": 1,
-"selection_from_line": 135,
-"selection_to_column": 46,
-"selection_to_line": 135,
 "syntax_highlighter": "GDScript"
 }
 
@@ -77,16 +59,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 12,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
+"row": 14,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 7,
-"selection_from_line": 12,
-"selection_to_column": 12,
-"selection_to_line": 12,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -95,11 +73,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 44,
+"column": 29,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 77,
-"scroll_position": 60.0,
+"scroll_position": 82.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -109,29 +87,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
+"column": 15,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 27,
-"scroll_position": 12.0,
-"selection": true,
-"selection_from_column": 7,
-"selection_from_line": 27,
-"selection_to_column": 20,
-"selection_to_line": 27,
-"syntax_highlighter": "GDScript"
-}
-
-[res://components/escape_menu/lobby/lobby_escape_menu.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 5,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 42,
-"scroll_position": 24.0,
+"row": 17,
+"scroll_position": 4.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -141,16 +101,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 20,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 25,
-"scroll_position": 18.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 25,
-"selection_to_column": 58,
-"selection_to_line": 26,
+"row": 12,
+"scroll_position": 3.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -190,8 +146,8 @@ state={
 "column": 7,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 26,
-"scroll_position": 9.0,
+"row": 0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -205,7 +161,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 50,
-"scroll_position": 39.0,
+"scroll_position": 38.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -217,9 +173,9 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 16,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 24,
+"h_scroll_position": 84,
 "row": 116,
-"scroll_position": 106.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -243,11 +199,39 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 16,
+"column": 34,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 43,
+"scroll_position": 32.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://states/game/game.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 30,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 16,
-"scroll_position": 9.0,
+"scroll_position": 110.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://components/escape_menu/game/game_escape_menu.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 5,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
