--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -17,24 +17,24 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://main.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/game/", "res://objects/character/", "res://maps/prototype/", "res://components/", "res://components/escape_menu/game/", "res://components/chat/", "res://classes/", "res://classes/message/", "res://assets/textures/prototype/")
+dock_filesystem_selected_paths=PackedStringArray("res://states/game/game.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/game/", "res://objects/", "res://objects/character/", "res://maps/prototype/", "res://components/escape_menu/game/", "res://components/chat/", "res://classes/message/", "res://assets/textures/prototype/")
 dock_3="Scene,Import"
 dock_4="FileSystem,Godobuf"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn", "res://objects/character/character.tscn", "res://objects/character/camera.tscn", "res://states/game/game.tscn")
-current_scene="res://states/game/game.tscn"
+open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn")
+current_scene="res://maps/prototype/prototype.tscn"
 center_split_offset=-192
-selected_default_debugger_tab_idx=1
-selected_main_editor_idx=2
+selected_default_debugger_tab_idx=0
+selected_main_editor_idx=1
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://objects/character/camera.gd", "res://objects/character/character.gd", "res://states/game/game.gd", "res://autoloads/game_manager.gd", "res://main.gd", "res://autoloads/signals.gd"]
+open_scripts=["res://objects/character/character.gd", "res://components/chat/chat.gd", "res://states/game/game.gd"]
 selected_script="res://objects/character/character.gd"
 open_help=[]
 script_split_offset=117
@@ -43,9 +43,9 @@ zoom_factor=1.0
 
 [ShaderEditor]
 
-open_shaders=["res://assets/shaders/blur.gdshader"]
+open_shaders=["res://assets/shaders/blur.gdshader", "res://assets/shaders/forground_shader.gdshader", "res://assets/shaders/forground_shader_2.gdshader"]
 split_offset=0
-selected_shader="res://assets/shaders/blur.gdshader"
+selected_shader="res://assets/shaders/forground_shader.gdshader"
 text_shader_zoom_factor=1.0
 
 [editor_log]
