--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -165,12 +165,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 38,
+"column": 32,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 119,
-"scroll_position": 105.0,
-"selection": false,
+"row": 113,
+"scroll_position": 101.0,
+"selection": true,
+"selection_from_column": 30,
+"selection_from_line": 113,
+"selection_to_column": 32,
+"selection_to_line": 113,
 "syntax_highlighter": "GDScript"
 }
 
@@ -193,12 +197,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 46,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 152,
-"scroll_position": 137.0,
-"selection": false,
+"row": 18,
+"scroll_position": 6.0,
+"selection": true,
+"selection_from_column": 17,
+"selection_from_line": 18,
+"selection_to_column": 18,
+"selection_to_line": 18,
 "syntax_highlighter": "GDScript"
 }
 
@@ -207,11 +215,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 55,
+"column": 57,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 70,
-"scroll_position": 58.0,
+"row": 46,
+"scroll_position": 33.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
