--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -168,13 +168,9 @@ state={
 "column": 32,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 113,
-"scroll_position": 101.0,
-"selection": true,
-"selection_from_column": 30,
-"selection_from_line": 113,
-"selection_to_column": 32,
-"selection_to_line": 113,
+"row": 211,
+"scroll_position": 206.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -192,34 +188,30 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://objects/character/character.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 18,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 18,
-"scroll_position": 6.0,
-"selection": true,
-"selection_from_column": 17,
-"selection_from_line": 18,
-"selection_to_column": 18,
-"selection_to_line": 18,
-"syntax_highlighter": "GDScript"
-}
-
 [res://components/chat_bubble/chat_bubble.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 57,
+"column": 30,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 46,
-"scroll_position": 33.0,
+"row": 34,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://objects/character/player/player.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 25,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 36,
+"scroll_position": 30.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
