--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -17,24 +17,25 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://states/game/game.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/game/", "res://objects/character/", "res://maps/prototype/", "res://components/", "res://components/escape_menu/game/", "res://components/chat_bubble/", "res://classes/message/", "res://autoloads/", "res://assets/textures/prototype/")
+dock_filesystem_selected_paths=PackedStringArray("res://packets.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/game/", "res://objects/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://components/", "res://components/escape_menu/game/", "res://components/chat_bubble/", "res://classes/message/", "res://autoloads/", "res://assets/textures/prototype/")
 dock_3="Scene,Import"
 dock_4="FileSystem,Godobuf"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn", "res://objects/character/character.tscn", "res://components/chat_bubble/chat_bubble.tscn")
-current_scene="res://components/chat_bubble/chat_bubble.tscn"
+open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn", "res://objects/character/player/player.tscn")
+current_scene="res://maps/prototype/prototype.tscn"
 center_split_offset=-192
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://objects/character/character.gd", "res://components/chat_bubble/chat_bubble.gd", "res://states/game/game.gd"]
-selected_script="res://components/chat_bubble/chat_bubble.gd"
+open_scripts=["res://components/chat_bubble/chat_bubble.gd", "res://states/game/game.gd", "res://objects/character/player/player.gd"]
+selected_script="res://states/game/game.gd"
 open_help=[]
 script_split_offset=112
 list_split_offset=75
