--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -20,7 +20,7 @@ dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://packets.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/game/", "res://objects/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://components/", "res://components/escape_menu/game/", "res://components/chat_bubble/", "res://classes/message/", "res://autoloads/", "res://assets/textures/prototype/")
 dock_3="Scene,Import"
-dock_4="FileSystem,Godobuf"
+dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
@@ -29,14 +29,14 @@ open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn", "res://obje
 current_scene="res://maps/prototype/prototype.tscn"
 center_split_offset=-192
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=1
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://components/chat_bubble/chat_bubble.gd", "res://states/game/game.gd", "res://objects/character/player/player.gd"]
-selected_script="res://states/game/game.gd"
-open_help=[]
+selected_script="res://objects/character/player/player.gd"
+open_help=["CharacterBody3D"]
 script_split_offset=112
 list_split_offset=75
 zoom_factor=1.0
