--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
       "request": "launch",
       "mode": "auto",
       "program": "${workspaceFolder}/server/main.go",
-      "output": "${workspaceFolder}/server/cmd/debug_executable.exe",
+      "output": "${workspaceFolder}/server/cmd/mmo-server-v0.0.1.0.exe",
     }
   ]
 }
