--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -1,7 +1,7 @@
 [docks]
 
 dock_3_selected_tab_idx=0
-dock_4_selected_tab_idx=0
+dock_4_selected_tab_idx=1
 dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://objects/character/player/player.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://autoloads/utils.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/game/", "res://objects/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://components/", "res://components/escape_menu/game/", "res://components/chat/", "res://classes/message/", "res://autoloads/", "res://assets/textures/prototype/")
 dock_3="Scene,Import"
 dock_4="FileSystem,Godobuf"
@@ -25,16 +25,16 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn")
-current_scene="res://maps/prototype/prototype.tscn"
+open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn", "res://objects/character/player/player.tscn")
+current_scene="res://objects/character/player/player.tscn"
 center_split_offset=-192
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_default_debugger_tab_idx=1
+selected_main_editor_idx=1
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://states/game/game.gd", "res://objects/character/player/player.gd"]
+open_scripts=["res://states/game/game.gd", "res://objects/character/player/player.gd", "res://autoloads/utils.gd"]
 selected_script="res://objects/character/player/player.gd"
 open_help=[]
 script_split_offset=112
