--- a/client/.godot/editor/project_metadata.cfg
+++ b/client/.godot/editor/project_metadata.cfg
@@ -35,6 +35,7 @@ run_instances_config=Array[Dictionary]([{
 "override_features": false
 }])
 run_debug_collisions=false
+run_deploy_remote_debug=false
 
 [export_options]
 
