--- a/client/.godot/editor/project_metadata.cfg
+++ b/client/.godot/editor/project_metadata.cfg
@@ -33,6 +33,16 @@ run_instances_config=Array[Dictionary]([{
 "features": "",
 "override_args": false,
 "override_features": false
+}, {
+"arguments": "",
+"features": "",
+"override_args": false,
+"override_features": false
+}, {
+"arguments": "",
+"features": "",
+"override_args": false,
+"override_features": false
 }])
 run_debug_collisions=false
 run_deploy_remote_debug=false
