--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://autoloads/utils.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://addons/")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/game/", "res://objects/", "res://objects/character/", "res://objects/character/player/", "res://maps/prototype/", "res://components/", "res://components/escape_menu/game/", "res://components/chat/", "res://classes/message/", "res://autoloads/", "res://assets/textures/prototype/")
 dock_3="Scene,Import"
 dock_4="FileSystem,Godobuf"
