--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -1,7 +1,7 @@
 [docks]
 
 dock_3_selected_tab_idx=0
-dock_4_selected_tab_idx=0
+dock_4_selected_tab_idx=1
 dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
@@ -35,7 +35,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://states/game/game.gd", "res://objects/character/player/player.gd", "res://autoloads/utils.gd"]
-selected_script="res://states/game/game.gd"
+selected_script="res://autoloads/utils.gd"
 open_help=[]
 script_split_offset=112
 list_split_offset=75
