--- a/client/.godot/editor/project_metadata.cfg
+++ b/client/.godot/editor/project_metadata.cfg
@@ -5,7 +5,7 @@ use_advanced_connections=false
 
 [dialog_bounds]
 
-project_settings=Rect2(193, 83, 900, 525)
+project_settings=Rect2(306, 131, 900, 525)
 create_new_node=Rect2(342, 121, 675, 525)
 export=Rect2(342, 196, 675, 375)
 editor_settings=Rect2(342, 121, 675, 525)
@@ -43,7 +43,7 @@ default_filename="MMO Client"
 
 [project_settings]
 
-advanced_mode=false
+advanced_mode=true
 
 [color_picker]
 
