--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -17,7 +17,7 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 0,
@@ -161,12 +161,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 35,
+"column": 28,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 190,
-"scroll_position": 185.0,
-"selection": false,
+"row": 240,
+"scroll_position": 201.0,
+"selection": true,
+"selection_from_column": 10,
+"selection_from_line": 240,
+"selection_to_column": 28,
+"selection_to_line": 240,
 "syntax_highlighter": "GDScript"
 }
 
@@ -203,11 +207,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 36,
+"column": 60,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 126,
-"scroll_position": 39.3333,
+"row": 73,
+"scroll_position": 66.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
