--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -161,16 +161,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 28,
+"column": 30,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 240,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 10,
-"selection_from_line": 240,
-"selection_to_column": 28,
-"selection_to_line": 240,
+"row": 212,
+"scroll_position": 196.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -207,11 +203,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 60,
-"folded_lines": Array[int]([]),
+"column": 0,
+"folded_lines": Array[int]([161, 224, 245]),
 "h_scroll_position": 0,
-"row": 218,
-"scroll_position": 201.0,
+"row": 149,
+"scroll_position": 137.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
