--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -203,11 +203,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([161, 224, 245]),
+"column": 29,
+"folded_lines": Array[int]([79, 109, 112, 117, 159, 229, 250, 254]),
 "h_scroll_position": 0,
-"row": 149,
-"scroll_position": 137.0,
+"row": 210,
+"scroll_position": 132.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
