--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -203,11 +203,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 49,
-"folded_lines": Array[int]([81, 111, 114, 119, 161, 268, 289, 293]),
+"column": 0,
+"folded_lines": Array[int]([111, 114, 119, 151, 159, 214, 225, 261, 295, 299]),
 "h_scroll_position": 0,
-"row": 219,
-"scroll_position": 145.0,
+"row": 47,
+"scroll_position": 41.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
