--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -161,11 +161,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 34,
+"column": 8,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 248,
-"scroll_position": 0.0,
+"row": 132,
+"scroll_position": 124.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -203,11 +203,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([111, 114, 119, 151, 159, 225, 261]),
+"column": 39,
+"folded_lines": Array[int]([55, 61, 81, 111, 114, 119, 151, 159, 165, 211, 222, 266, 271]),
 "h_scroll_position": 0,
-"row": 42,
-"scroll_position": 35.0,
+"row": 114,
+"scroll_position": 6.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
